# progetto_finale

./: dfs.hpp
cicli_minimi/: CMakeLists.txt  de_pina.hpp  dfs.hpp  prova.cpp  queue_priority.hpp  unidirected_edge.hpp  unidirected_graph.hpp  visit.hpp
conjugate_grad/: CMakeLists.txt  gc.hpp  gradiente_coniugato.cpp
linear_system/: CMakeLists.txt  matrices.hpp  system.cpp  test_matrici.cpp
main/: CMakeLists.txt  main.cpp  netlist_prova.txt
netlist_parser/: CMakeLists.txt  README.md  adapter_cicli.hpp  adapter_sistema_lineare.hpp  circuit_components.hpp  netlist_parser.hpp  netlist_prova.txt  parser_demo.cpp
